data/derived/fa15/progs/unify/prog0944.ml.out
Characters 86-93:
  | h::t -> (mulByDigit h l2) :: bigMul(t, l2);;
                                       ^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type int list
